--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -58,14 +58,7 @@
 			linux,default-trigger = "mmc0";
 		};
 	};
-/*	twl4030-usb {*/
-/*	compatible = "ti,twl4030-usb";*/
-/*	interrupts = < 10 4 >;*/
-/*	usb1v5-supply = <&vusb1v5>;*/
-/*	usb1v8-supply = <&vusb1v8>;*/
-/*	usb3v1-supply = <&vusb3v1>;*/
-/*	usb_mode = <1>;*/
-/*};*/
+
 	
 	hwconfig {
 		i_enable_mmc = <1>;
@@ -223,6 +216,14 @@
 
 &mmc3 {
 	status = "disabled";
+};
+@twl4030-usb {
+	compatible = "ti,twl4030-usb";
+	interrupts = < 10 4 >;
+	usb1v5-supply = <&vusb1v5>;
+	usb1v8-supply = <&vusb1v8>;
+	usb3v1-supply = <&vusb3v1>;
+	usb_mode = <1>;
 };
 /*twl4030-usb {*/
 /*	compatible = "ti,twl4030-usb";*/
