--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -292,6 +292,7 @@ CONFIG_HDQ_MASTER_OMAP=m
 CONFIG_W1_SLAVE_DS250X=m
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_GPIO=y
+CONFIG_POWER_SUPPLY=y
 CONFIG_HWMON=m
 CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_LM75=m
@@ -396,10 +397,9 @@ CONFIG_USB_MOUSE=m
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_MON=m
-CONFIG_USB_XHCI_HCD=y
-CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_EHCI_HCD=y
-CONFIG_USB_EHCI_HCD_OMAP=m
+CONFIG_USB_EHCI_FSL=y
+CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_ACM=m
 CONFIG_USB_STORAGE=y
@@ -407,9 +407,9 @@ CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_MUSB_HOST=y
 CONFIG_USB_MUSB_TUSB6010=m
 CONFIG_USB_MUSB_OMAP2PLUS=y
+CONFIG_USB_MUSB_AM35X=y
 CONFIG_USB_MUSB_DSPS=y
-CONFIG_USB_INVENTRA_DMA=y
-CONFIG_USB_TI_CPPI41_DMA=y
+CONFIG_MUSB_PIO_ONLY=y
 CONFIG_USB_DWC3=m
 CONFIG_USB_SERIAL=m
 CONFIG_USB_SERIAL_GENERIC=y
@@ -418,6 +418,7 @@ CONFIG_USB_SERIAL_FTDI_SIO=m
 CONFIG_USB_SERIAL_PL2303=m
 CONFIG_USB_SERIAL_OPTION=m
 CONFIG_USB_TEST=m
+CONFIG_USB_HUB_USB251XB=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_AM335X_PHY_USB=y
 CONFIG_TWL6030_USB=y
@@ -479,6 +480,7 @@ CONFIG_RTC_DRV_PALMAS=m
 CONFIG_RTC_DRV_OMAP=m
 CONFIG_RTC_DRV_CPCAP=m
 CONFIG_DMADEVICES=y
+CONFIG_TI_CPPI41=y
 CONFIG_COMMON_CLK_CDCE706=y
 CONFIG_COMMON_CLK_CDCE925=y
 CONFIG_CLK_TWL6040=m
