--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -182,7 +182,7 @@ CONFIG_KS8851=y
 CONFIG_KS8851_MLL=y
 # CONFIG_NET_VENDOR_MICROCHIP is not set
 CONFIG_NS83820=y
-CONFIG_AX88796=m
+CONFIG_AX88796=y
 CONFIG_AX88796_93CX6=y
 # CONFIG_NET_VENDOR_QUALCOMM is not set
 # CONFIG_NET_VENDOR_SAMSUNG is not set
@@ -403,6 +403,8 @@ CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_ACM=m
 CONFIG_USB_STORAGE=y
+CONFIG_USB_STORAGE_DEBUG=y
+CONFIG_USB_UAS=y
 CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_MUSB_HOST=y
 CONFIG_USB_MUSB_TUSB6010=m
@@ -411,9 +413,10 @@ CONFIG_USB_MUSB_AM35X=y
 CONFIG_USB_MUSB_DSPS=y
 CONFIG_MUSB_PIO_ONLY=y
 CONFIG_USB_DWC3=m
-CONFIG_USB_SERIAL=m
+CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_GENERIC=y
-CONFIG_USB_SERIAL_SIMPLE=m
+CONFIG_USB_SERIAL_SIMPLE=y
+CONFIG_USB_SERIAL_CP210X=y
 CONFIG_USB_SERIAL_FTDI_SIO=m
 CONFIG_USB_SERIAL_PL2303=m
 CONFIG_USB_SERIAL_OPTION=m
