--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -39,6 +39,7 @@ CONFIG_ARM_THUMBEE=y
 CONFIG_ARM_ERRATA_411920=y
 CONFIG_SMP=y
 CONFIG_NR_CPUS=2
+CONFIG_DEPRECATED_PARAM_STRUCT=y
 CONFIG_CMDLINE="root=/dev/mmcblk0p2 rootwait console=ttyS2,115200"
 CONFIG_KEXEC=y
 CONFIG_CPU_FREQ=y
@@ -128,7 +129,11 @@ CONFIG_RXKAD=y
 CONFIG_CFG80211=m
 CONFIG_MAC80211=m
 CONFIG_PCI=y
+CONFIG_PCIEPORTBUS=y
+CONFIG_HOTPLUG_PCI_PCIE=y
 CONFIG_PCI_MSI=y
+CONFIG_PCI_DEBUG=y
+CONFIG_HOTPLUG_PCI=y
 CONFIG_PCI_DRA7XX_EP=y
 CONFIG_PCI_ENDPOINT=y
 CONFIG_PCI_ENDPOINT_CONFIGFS=y
@@ -155,6 +160,8 @@ CONFIG_MTD_NAND_OMAP2=y
 CONFIG_MTD_NAND_OMAP_BCH=y
 CONFIG_MTD_SPI_NOR=m
 CONFIG_MTD_UBI=y
+CONFIG_PARPORT=y
+CONFIG_PARPORT_AX88796=y
 CONFIG_ZRAM=m
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP=y
@@ -182,8 +189,9 @@ CONFIG_KS8851=y
 CONFIG_KS8851_MLL=y
 # CONFIG_NET_VENDOR_MICROCHIP is not set
 CONFIG_NS83820=y
-CONFIG_AX88796=y
+CONFIG_AX88796=m
 CONFIG_AX88796_93CX6=y
+CONFIG_NE2K_PCI=m
 # CONFIG_NET_VENDOR_QUALCOMM is not set
 # CONFIG_NET_VENDOR_SAMSUNG is not set
 # CONFIG_NET_VENDOR_SEEQ is not set
@@ -195,6 +203,7 @@ CONFIG_TI_CPSW=y
 CONFIG_TI_CPTS=y
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
+CONFIG_MDIO_BITBANG=y
 CONFIG_AX88796B_PHY=y
 CONFIG_AT803X_PHY=y
 CONFIG_DP83848_PHY=y
@@ -273,6 +282,10 @@ CONFIG_SERIAL_OMAP=y
 CONFIG_SERIAL_OMAP_CONSOLE=y
 CONFIG_SERIAL_DEV_BUS=y
 CONFIG_I2C_CHARDEV=y
+CONFIG_I2C_MUX=y
+CONFIG_I2C_ARB_GPIO_CHALLENGE=y
+CONFIG_I2C_MUX_GPIO=y
+CONFIG_I2C_MUX_GPMUX=y
 CONFIG_SPI=y
 CONFIG_SPI_OMAP24XX=y
 CONFIG_SPI_TI_QSPI=m
@@ -282,12 +295,14 @@ CONFIG_SSI_PROTOCOL=m
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_PCA953X=m
 CONFIG_GPIO_PCF857X=y
 CONFIG_GPIO_LP87565=y
 CONFIG_GPIO_PALMAS=y
 CONFIG_GPIO_TWL4030=y
 CONFIG_W1=m
+CONFIG_W1_MASTER_GPIO=m
 CONFIG_HDQ_MASTER_OMAP=m
 CONFIG_W1_SLAVE_DS250X=m
 CONFIG_POWER_RESET=y
@@ -570,4 +585,3 @@ CONFIG_DEBUG_LL=y
 CONFIG_DEBUG_OMAP3UART3=y
 CONFIG_DEBUG_UNCOMPRESS=y
 CONFIG_EARLY_PRINTK=y
-
