--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -170,9 +170,9 @@
 		pin_163 = "uart3_cts_rctx.gpio_163", "IEN", "PTD", "DIS"; /* II2 Reset */
 		pin_26 = "etk_d12.gpio_26", "IEN", "PTD", "DIS"; /* RS232 Reset */
 	};
-	ne2000: ethernet@80000 {
+	ne2000: ethernet@20000000 {
 		compatible = "national,ne2000";
-		reg = <0x80000 32>;
+		reg = <0x20000000 32>;
 		interrupts = <17 0>;
 		national,dcr = <0x48>;
 	};
