--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -171,7 +171,7 @@
 		pin_26 = "etk_d12.gpio_26", "IEN", "PTD", "DIS"; /* RS232 Reset */
 	};
 	ne2000: ethernet@20000000 {
-		compatible = "national,ne2000";
+		compatible = "ax88796";
 		reg = <0x20000000 32>;
 		interrupts = <17 0>;
 		national,dcr = <0x48>;
