--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -189,9 +189,9 @@ CONFIG_KS8851=y
 CONFIG_KS8851_MLL=y
 # CONFIG_NET_VENDOR_MICROCHIP is not set
 CONFIG_NS83820=y
-CONFIG_AX88796=m
+CONFIG_AX88796=y
 CONFIG_AX88796_93CX6=y
-CONFIG_NE2K_PCI=m
+CONFIG_NE2K_PCI=y
 # CONFIG_NET_VENDOR_QUALCOMM is not set
 # CONFIG_NET_VENDOR_SAMSUNG is not set
 # CONFIG_NET_VENDOR_SEEQ is not set
@@ -203,7 +203,6 @@ CONFIG_TI_CPSW=y
 CONFIG_TI_CPTS=y
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
-CONFIG_MDIO_BITBANG=y
 CONFIG_AX88796B_PHY=y
 CONFIG_AT803X_PHY=y
 CONFIG_DP83848_PHY=y
@@ -491,6 +490,7 @@ CONFIG_LEDS_TRIGGER_GPIO=m
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=m
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_DS1307=m
+CONFIG_RTC_DRV_PCF8563=m
 CONFIG_RTC_DRV_M41T80=m
 CONFIG_RTC_DRV_TWL92330=y
 CONFIG_RTC_DRV_TWL4030=m
