--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -170,12 +170,14 @@
 		pin_163 = "uart3_cts_rctx.gpio_163", "IEN", "PTD", "DIS"; /* II2 Reset */
 		pin_26 = "etk_d12.gpio_26", "IEN", "PTD", "DIS"; /* RS232 Reset */
 	};
-	ne2000: ethernet@20000000 {
-		compatible = "ax88796";
-		reg = <0x20000000 32>;
-		interrupts = <17 0>;
-		national,dcr = <0x48>;
-	};
+my_device@ffdf0000 {
+    compatible = "ax88796_dt";
+    reg = <0xffdf0000 0x1000> 
+    /* 
+     * reg = address of device and size 
+     * (Minimum is System's Pagesize = 0x1000 Byte in my case
+     */
+}
 };
 
 &omap3_pmx_core {
