--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -301,6 +301,7 @@ CONFIG_GPIO_PCF857X=y
 CONFIG_GPIO_LP87565=y
 CONFIG_GPIO_PALMAS=y
 CONFIG_GPIO_TWL4030=y
+CONFIG_GPIO_MOCKUP=y
 CONFIG_W1=m
 CONFIG_W1_MASTER_GPIO=m
 CONFIG_HDQ_MASTER_OMAP=m
@@ -412,14 +413,17 @@ CONFIG_USB_HID=m
 CONFIG_USB_HIDDEV=y
 CONFIG_USB_KBD=m
 CONFIG_USB_MOUSE=m
+CONFIG_USB_CONN_GPIO=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+CONFIG_USB_DYNAMIC_MINORS=y
 CONFIG_USB_MON=m
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_FSL=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_ACM=m
+CONFIG_USB_TMC=m
 CONFIG_USB_STORAGE=y
 CONFIG_USB_STORAGE_DEBUG=y
 CONFIG_USB_UAS=y
@@ -429,7 +433,6 @@ CONFIG_USB_MUSB_TUSB6010=m
 CONFIG_USB_MUSB_OMAP2PLUS=y
 CONFIG_USB_MUSB_AM35X=y
 CONFIG_USB_MUSB_DSPS=y
-CONFIG_MUSB_PIO_ONLY=y
 CONFIG_USB_DWC3=m
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_GENERIC=y
@@ -440,6 +443,7 @@ CONFIG_USB_SERIAL_PL2303=m
 CONFIG_USB_SERIAL_OPTION=m
 CONFIG_USB_TEST=m
 CONFIG_USB_HUB_USB251XB=y
+CONFIG_KEYSTONE_USB_PHY=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_AM335X_PHY_USB=y
 CONFIG_TWL6030_USB=y
@@ -582,6 +586,7 @@ CONFIG_FONT_8x16=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_SCHEDSTATS=y
+CONFIG_MEMTEST=y
 CONFIG_DEBUG_WX=y
 CONFIG_DEBUG_USER=y
 CONFIG_DEBUG_LL=y
