--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -253,7 +253,23 @@ netcard: AX88796BLI@ffdf0000 {
 &mmc3 {
 	status = "disabled";
 };
+&usb {
+    status = "okay";
+};
 
+&usb_ctrl_mod {
+    status = "okay";
+};
+
+&usb0_phy {
+    status = "okay";
+};
+
+&usb0 {
+    status = "okay";
+    dr_mode = "host";
+    /* maximum-speed = "full-speed"; */
+};
 
 
 
