--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -218,14 +218,7 @@ netcard: AX88796BLI@ffdf0000 {
 			compatible = "ti,twl4030-power";
 			ti,use_poweroff;
 		};
-//		usb:twl4030-usb {
-//	compatible = "ti,twl4030-usb";
-//	interrupts = < 10 4 >;
-//	usb1v5-supply = <&vusb1v5>;
-//	usb1v8-supply = <&vusb1v8>;
-//	usb3v1-supply = <&vusb3v1>;
-//	usb_mode = <1>;
-//};		
+	
 	};
 };
 &i2c2 {
@@ -253,25 +246,32 @@ netcard: AX88796BLI@ffdf0000 {
 &mmc3 {
 	status = "disabled";
 };
-&usb {
-    status = "okay";
-};
+/*&usb {*/
+/*    status = "okay";*/
+/*};*/
 
-&usb_ctrl_mod {
-    status = "okay";
-};
+/*&usb_ctrl_mod {*/
+/*    status = "okay";*/
+/*};*/
 
-&usb0_phy {
-    status = "okay";
-};
+/*&usb0_phy {*/
+/*    status = "okay";*/
+/*};*/
 
-&usb0 {
-    status = "okay";
-    dr_mode = "host";
-    /* maximum-speed = "full-speed"; */
-};
+/*&usb0 {*/
+/*    status = "okay";*/
+/*    dr_mode = "host";*/
+/*     maximum-speed = "full-speed"; */
+/*};*/
 
-
+		&twl4030-usb {
+	compatible = "ti,twl4030-usb";
+	interrupts = < 10 4 >;
+	usb1v5-supply = <&vusb1v5>;
+	usb1v8-supply = <&vusb1v8>;
+	usb3v1-supply = <&vusb3v1>;
+	usb_mode = <1>;
+};	
 
 
 /*twl4030-usb {*/
