--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -241,7 +241,7 @@ netcard: AX88796BLI@ffdf0000 {
 
 
 #include "twl4030.dtsi"
-//#include "twl4030_omap3.dtsi"
+#include "twl4030_omap3.dtsi"
 &mmc1 {
 	vmmc-supply = <&vmmc1>;
 	vqmmc-supply = <&vsim>;
