--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -413,6 +413,7 @@ CONFIG_USB_HID=m
 CONFIG_USB_HIDDEV=y
 CONFIG_USB_KBD=m
 CONFIG_USB_MOUSE=m
+CONFIG_USB_ULPI_BUS=y
 CONFIG_USB_CONN_GPIO=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
@@ -438,12 +439,14 @@ CONFIG_USB_STORAGE_DEBUG=y
 CONFIG_USB_UAS=y
 CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_MUSB_HOST=y
-CONFIG_USB_MUSB_TUSB6010=m
+CONFIG_USB_MUSB_TUSB6010=y
 CONFIG_USB_MUSB_OMAP2PLUS=y
 CONFIG_USB_MUSB_AM35X=y
 CONFIG_USB_MUSB_DSPS=y
-CONFIG_MUSB_PIO_ONLY=y
+CONFIG_USB_TI_CPPI41_DMA=y
+CONFIG_USB_TUSB_OMAP_DMA=y
 CONFIG_USB_DWC3=m
+CONFIG_USB_DWC3_ULPI=y
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_GENERIC=y
 CONFIG_USB_SERIAL_SIMPLE=y
@@ -520,7 +523,6 @@ CONFIG_RTC_DRV_PALMAS=m
 CONFIG_RTC_DRV_OMAP=m
 CONFIG_RTC_DRV_CPCAP=m
 CONFIG_DMADEVICES=y
-CONFIG_TI_CPPI41=y
 CONFIG_COMMON_CLK_CDCE706=y
 CONFIG_COMMON_CLK_CDCE925=y
 CONFIG_CLK_TWL6040=m
