--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -261,6 +261,7 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_CPCAP_PWRBUTTON=m
 CONFIG_INPUT_TPS65218_PWRBUTTON=m
 CONFIG_INPUT_TWL4030_PWRBUTTON=m
+CONFIG_INPUT_TWL4030_VIBRA=m
 CONFIG_INPUT_UINPUT=m
 CONFIG_INPUT_PALMAS_PWRBUTTON=m
 CONFIG_INPUT_PWM_VIBRA=m
@@ -297,9 +298,15 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_PCA953X=m
 CONFIG_GPIO_PCF857X=y
+CONFIG_HTC_EGPIO=y
+CONFIG_GPIO_LP873X=m
 CONFIG_GPIO_LP87565=y
 CONFIG_GPIO_PALMAS=y
-CONFIG_GPIO_TWL4030=y
+CONFIG_GPIO_TPS65218=m
+CONFIG_GPIO_TPS65910=y
+CONFIG_GPIO_TQMX86=m
+CONFIG_GPIO_TWL4030=m
+CONFIG_GPIO_TWL6040=m
 CONFIG_GPIO_MOCKUP=y
 CONFIG_W1=m
 CONFIG_W1_MASTER_GPIO=m
@@ -308,6 +315,8 @@ CONFIG_W1_SLAVE_DS250X=m
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_SUPPLY=y
+CONFIG_BATTERY_TWL4030_MADC=m
+CONFIG_CHARGER_TWL4030=m
 CONFIG_HWMON=m
 CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_LM75=m
