--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -230,6 +230,11 @@ netcard: AX88796BLI@ffdf0000 {
 	vusb3v1: regulator-vusb3v1 {
 		compatible = "ti,twl4030-vusb3v1";
 	};
+	vio: regulator@0 {
+		compatible = "ti,twl4030-vio";
+		regulator-min-microvolt  = <1800000>;
+		regulator-max-microvolt  = <1850000>;
+	};
 		usb2_phy: twl4030-usb {
 		compatible = "ti,twl4030-usb";
 		interrupts = <10>, <4>;
