--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -244,9 +244,23 @@ netcard: AX88796BLI@ffdf0000 {
 		regulator-max-microvolt  = <3150000>;
 	};
 //VDAC: 1800 mV normal standby
+ 	vadc:regulator-vadc {
+		compatible = "ti,twl4030-vadc";
+		regulator-min-microvolt  = <1800000>;
+		regulator-max-microvolt  = <1800000>;
+	};
 //VPLL2: 1800 mV normal standby
+ 	vpll2:regulator-vpll2 {
+		compatible = "ti,twl4030-vpll2";
+		regulator-min-microvolt  = <1800000>;
+		regulator-max-microvolt  = <1800000>;
+	};
 //VSIM: 1800 <--> 3000 mV at 1800 mV normal standby
-	
+ 	vsim:regulator-vsim {
+		compatible = "ti,twl4030-vsim";
+		regulator-min-microvolt  = <1800000>;
+		regulator-max-microvolt  = <3000000>;
+	};	
 		usb2_phy: twl4030-usb {
 		compatible = "ti,twl4030-usb";
 		interrupts = <10>, <4>;
