--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -246,7 +246,7 @@ CONFIG_KEYBOARD_ATKBD=m
 CONFIG_KEYBOARD_GPIO=m
 CONFIG_KEYBOARD_MATRIX=m
 CONFIG_KEYBOARD_OMAP4=m
-CONFIG_KEYBOARD_TWL4030=m
+CONFIG_KEYBOARD_TWL4030=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ADS7846=m
@@ -260,8 +260,8 @@ CONFIG_TOUCHSCREEN_TSC2007=m
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_CPCAP_PWRBUTTON=m
 CONFIG_INPUT_TPS65218_PWRBUTTON=m
-CONFIG_INPUT_TWL4030_PWRBUTTON=m
-CONFIG_INPUT_TWL4030_VIBRA=m
+CONFIG_INPUT_TWL4030_PWRBUTTON=y
+CONFIG_INPUT_TWL4030_VIBRA=y
 CONFIG_INPUT_UINPUT=m
 CONFIG_INPUT_PALMAS_PWRBUTTON=m
 CONFIG_INPUT_PWM_VIBRA=m
@@ -305,7 +305,7 @@ CONFIG_GPIO_PALMAS=y
 CONFIG_GPIO_TPS65218=m
 CONFIG_GPIO_TPS65910=y
 CONFIG_GPIO_TQMX86=m
-CONFIG_GPIO_TWL4030=m
+CONFIG_GPIO_TWL4030=y
 CONFIG_GPIO_TWL6040=m
 CONFIG_GPIO_MOCKUP=y
 CONFIG_W1=m
@@ -333,7 +333,7 @@ CONFIG_SOFT_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG_ARCH_INITCALL=y
 CONFIG_OMAP_WATCHDOG=m
-CONFIG_TWL4030_WATCHDOG=m
+CONFIG_TWL4030_WATCHDOG=y
 CONFIG_MFD_CPCAP=y
 # CONFIG_ABX500_CORE is not set
 CONFIG_MFD_TI_AM335X_TSCADC=m
@@ -531,7 +531,7 @@ CONFIG_RTC_DRV_PCF8523=m
 CONFIG_RTC_DRV_PCF8563=m
 CONFIG_RTC_DRV_M41T80=m
 CONFIG_RTC_DRV_TWL92330=y
-CONFIG_RTC_DRV_TWL4030=m
+CONFIG_RTC_DRV_TWL4030=y
 CONFIG_RTC_DRV_PALMAS=m
 CONFIG_RTC_DRV_OMAP=m
 CONFIG_RTC_DRV_CPCAP=m
@@ -565,8 +565,8 @@ CONFIG_PWM=y
 CONFIG_PWM_OMAP_DMTIMER=m
 CONFIG_PWM_TIECAP=m
 CONFIG_PWM_TIEHRPWM=m
-CONFIG_PWM_TWL=m
-CONFIG_PWM_TWL_LED=m
+CONFIG_PWM_TWL=y
+CONFIG_PWM_TWL_LED=y
 CONFIG_PHY_CPCAP_USB=m
 CONFIG_PHY_MAPPHONE_MDM6600=m
 CONFIG_PHY_DM816X_USB=m
