--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -202,8 +202,8 @@ netcard: AX88796BLI@ffdf0000 {
 	};
 };
 
-&i2c0 {
-	clock-frequency = <2600000>;
+&i2c1 {
+	clock-frequency = <100000>;
 
 	twl: twl@48 {
 		reg = <0x48>;
@@ -271,8 +271,8 @@ netcard: AX88796BLI@ffdf0000 {
 	};
 	};
 };
-&i2c1 {
-	clock-frequency = <2600000>;
+&i2c2 {
+	clock-frequency = <100000>;
 	rtc8564: rtc8564@51 {
 		compatible = "epson,rtc8564";
 		reg = <0x51>;
