--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -207,7 +207,7 @@ netcard: AX88796BLI@ffdf0000 {
 
 /*	twl: twl@48 {*/
 /*		reg = <0x48>;*/
-/*		interrupts = <7>; /* SYS_NIRQ cascaded to intc */*/
+/*		interrupts = <7>; //SYS_NIRQ cascaded to intc */
 /*		interrupt-parent = <&intc>;*/
 
 /*//		twl_audio: audio {*/
