--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -215,65 +215,7 @@ netcard: AX88796BLI@ffdf0000 {
 //			codec {
 //			};
 //		};
-		twl_power: power {
-			compatible = "ti,twl4030-power";
-			ti,use_poweroff;
-		};
-		vusb1v5: regulator-vusb1v5 {
-		compatible = "ti,twl4030-vusb1v5";
-	};
 
-	vusb1v8: regulator-vusb1v8 {
-		compatible = "ti,twl4030-vusb1v8";
-	};
-
-	vusb3v1: regulator-vusb3v1 {
-		compatible = "ti,twl4030-vusb3v1";
-	};
-//VIO: 1800 <--> 1850 mV at 1800 mV normal standby
-
- 	vio:regulator-vio {
-		compatible = "ti,twl4030-vio";
-		regulator-min-microvolt  = <1800000>;
-		regulator-max-microvolt  = <1850000>;
-	};
-//MMC1: 1850 <--> 3150 mV at 3150 mV normal standby
- 	vmmc1:regulator-vmmc1 {
-		compatible = "ti,twl4030-vmmc1";
-		regulator-min-microvolt  = <1850000>;
-		regulator-max-microvolt  = <3150000>;
-	};
-//VDAC: 1800 mV normal standby
- 	vadc:regulator-vadc {
-		compatible = "ti,twl4030-vadc";
-		regulator-min-microvolt  = <1800000>;
-		regulator-max-microvolt  = <1800000>;
-	};
-//VPLL2: 1800 mV normal standby
- 	vpll2:regulator-vpll2 {
-		compatible = "ti,twl4030-vpll2";
-		regulator-min-microvolt  = <1800000>;
-		regulator-max-microvolt  = <1800000>;
-	};
-//VSIM: 1800 <--> 3000 mV at 1800 mV normal standby
- 	vsim:regulator-vsim {
-		compatible = "ti,twl4030-vsim";
-		regulator-min-microvolt  = <1800000>;
-		regulator-max-microvolt  = <3000000>;
-	};	
-		usb2_phy: twl4030-usb {
-		compatible = "ti,twl4030-usb";
-		interrupts = <10>, <4>;
-		usb1v5-supply = <&vusb1v5>;
-		usb1v8-supply = <&vusb1v8>;
-		usb3v1-supply = <&vusb3v1>;
-		usb_mode = <1>;
-	};
-	madc {
-		compatible = "ti,twl4030-madc";
-		interrupts = <3>;
-		#io-channel-cells = <1>;
-	};
 	};
 };
 &i2c2 {
@@ -301,6 +243,68 @@ netcard: AX88796BLI@ffdf0000 {
 &mmc3 {
 	status = "disabled";
 };
+
+
+
+		&power {
+			compatible = "ti,twl4030-power";
+			ti,use_poweroff;
+		};
+		&regulator-vusb1v5 {
+		compatible = "ti,twl4030-vusb1v5";
+	};
+
+	&regulator-vusb1v8 {
+		compatible = "ti,twl4030-vusb1v8";
+	};
+
+	&regulator-vusb3v1 {
+		compatible = "ti,twl4030-vusb3v1";
+	};
+//VIO: 1800 <--> 1850 mV at 1800 mV normal standby
+
+ 	&regulator-vio {
+		compatible = "ti,twl4030-vio";
+		regulator-min-microvolt  = <1800000>;
+		regulator-max-microvolt  = <1850000>;
+	};
+//MMC1: 1850 <--> 3150 mV at 3150 mV normal standby
+ 	&regulator-vmmc1 {
+		compatible = "ti,twl4030-vmmc1";
+		regulator-min-microvolt  = <1850000>;
+		regulator-max-microvolt  = <3150000>;
+	};
+//VDAC: 1800 mV normal standby
+ 	&regulator-vadc {
+		compatible = "ti,twl4030-vadc";
+		regulator-min-microvolt  = <1800000>;
+		regulator-max-microvolt  = <1800000>;
+	};
+//VPLL2: 1800 mV normal standby
+ 	&regulator-vpll2 {
+		compatible = "ti,twl4030-vpll2";
+		regulator-min-microvolt  = <1800000>;
+		regulator-max-microvolt  = <1800000>;
+	};
+//VSIM: 1800 <--> 3000 mV at 1800 mV normal standby
+ 	&regulator-vsim {
+		compatible = "ti,twl4030-vsim";
+		regulator-min-microvolt  = <1800000>;
+		regulator-max-microvolt  = <3000000>;
+	};	
+	&twl4030-usb {
+		compatible = "ti,twl4030-usb";
+		interrupts = <10>, <4>;
+		usb1v5-supply = <&vusb1v5>;
+		usb1v8-supply = <&vusb1v8>;
+		usb3v1-supply = <&vusb3v1>;
+		usb_mode = <1>;
+	};
+	&madc {
+		compatible = "ti,twl4030-madc";
+		interrupts = <3>;
+		#io-channel-cells = <1>;
+	};
 
 /*&usb {*/
 /*    status = "okay";*/
