--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -210,6 +210,15 @@ netcard: AX88796BLI@ffdf0000 {
 		interrupts = <7>; //SYS_NIRQ cascaded to intc 
 		interrupt-parent = <&intc>;
 		compatible = "ti,twl4030";
+		
+			twl4030-usb:twl4030-usb {
+		compatible = "ti,twl4030-usb";
+		interrupts = <10>, <4>;
+		usb1v5-supply = <&vusb1v5>;
+		usb1v8-supply = <&vusb1v8>;
+		usb3v1-supply = <&vusb3v1>;
+		usb_mode = <1>;
+	};
 //		twl_audio: audio {
 //			compatible = "ti,twl4030-audio";
 //			codec {
