--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -319,14 +319,14 @@ netcard: AX88796BLI@ffdf0000 {
 		interrupts = <3>;
 		#io-channel-cells = <1>;
 	};
-&usbhshost {
-	port1-mode = "ehci-phy";
-	port2-mode = "ehci-tll";
-	port3-mode = "ehci-phy";
-};
-&usbhsehci {
-	phys = <&hsusb0_phy 0 0>;
-};
+/*&usbhshost {*/
+/*	port1-mode = "ehci-phy";*/
+/*	port2-mode = "ehci-tll";*/
+/*	port3-mode = "ehci-phy";*/
+/*};*/
+/*&usbhsehci {*/
+/*	phys = <&hsusb0_phy 0 0>;*/
+/*};*/
 /*&usb {*/
 /*    status = "okay";*/
 /*};*/
@@ -339,11 +339,11 @@ netcard: AX88796BLI@ffdf0000 {
 /*    status = "okay";*/
 /*};*/
 
-/*&usb0 {*/
-/*    status = "okay";*/
-/*    dr_mode = "host";*/
-/*     maximum-speed = "full-speed"; */
-/*};*/
+&usb0 {
+    status = "okay";
+    dr_mode = "host";
+     maximum-speed = "full-speed"; 
+};
 
 
 
