--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -428,11 +428,10 @@ CONFIG_USB_DYNAMIC_MINORS=y
 CONFIG_USB_OTG=y
 CONFIG_USB_OTG_FSM=m
 CONFIG_USB_MON=m
-CONFIG_USB_EHCI_HCD=y
-CONFIG_USB_EHCI_FSL=y
-# CONFIG_USB_EHCI_HCD_OMAP is not set
-CONFIG_USB_EHCI_HCD_PLATFORM=y
-CONFIG_USB_OHCI_HCD=y
+CONFIG_USB_EHCI_HCD=m
+CONFIG_USB_EHCI_FSL=m
+CONFIG_USB_EHCI_HCD_PLATFORM=m
+CONFIG_USB_OHCI_HCD=m
 # CONFIG_USB_OHCI_HCD_LPC32XX is not set
 CONFIG_USB_UHCI_HCD=y
 CONFIG_USB_SL811_HCD=m
@@ -569,7 +568,6 @@ CONFIG_PWM_TWL=y
 CONFIG_PWM_TWL_LED=y
 CONFIG_PHY_CPCAP_USB=m
 CONFIG_PHY_MAPPHONE_MDM6600=m
-CONFIG_PHY_ATH79_USB=m
 CONFIG_PHY_DM816X_USB=m
 CONFIG_OMAP_USB2=y
 CONFIG_TI_PIPE3=y
