--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -344,7 +344,11 @@ netcard: AX88796BLI@ffdf0000 {
 /*    dr_mode = "host";*/
 /*     maximum-speed = "full-speed"; */
 /*};*/
-
+&usb_otg_hs {
+	interface-type = <1>;
+	mode = <3>;
+	power = <50>;
+};
 
 
 
