--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -426,13 +426,6 @@ CONFIG_USB_DYNAMIC_MINORS=y
 CONFIG_USB_OTG=y
 CONFIG_USB_OTG_FSM=m
 CONFIG_USB_MON=m
-CONFIG_USB_EHCI_HCD=m
-CONFIG_USB_EHCI_ROOT_HUB_TT=y
-CONFIG_USB_EHCI_HCD_PLATFORM=m
-CONFIG_USB_OHCI_HCD=m
-# CONFIG_USB_OHCI_HCD_LPC32XX is not set
-# CONFIG_USB_OHCI_HCD_OMAP3 is not set
-CONFIG_USB_OHCI_HCD_PLATFORM=m
 CONFIG_USB_RENESAS_USBHS=m
 CONFIG_USB_TMC=m
 CONFIG_USB_STORAGE=m
@@ -561,6 +554,7 @@ CONFIG_PWM_TWL=y
 CONFIG_PWM_TWL_LED=y
 CONFIG_PHY_CPCAP_USB=m
 CONFIG_PHY_MAPPHONE_MDM6600=m
+CONFIG_PHY_ATH79_USB=m
 CONFIG_PHY_DM816X_USB=m
 CONFIG_OMAP_USB2=y
 CONFIG_TI_PIPE3=y
