--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -171,7 +171,7 @@
 
 /*	memory {*/
 /*		device_type = "memory";*/
-/*		reg = <0x80000000 0x10000000>; /* 256 MB */*/
+/*		reg = <0x80000000 0x10000000>; // 256 MB 
 /*	};*/
 /*	aliases {*/
 /*		i2c0 = &i2c1;*/
