--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -24,6 +24,14 @@
 		device_type = "memory";
 		reg = <0x80000000 0x10000000>; /* 256 MB */
 	};
+	netcard: AX88796BLI@ffdf0000 {
+    compatible = "ax88796_dt";
+    reg = <0xffdf0000 0x1000> ;
+ 
+     //reg = address of device and size 
+     //(Minimum is System's Pagesize = 0x1000 Byte in my case
+
+};
 /*		leds {*/
 /*		compatible = "gpio-leds";*/
 /*		pinctrl-names = "default";*/
