--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -20,9 +20,9 @@
 				cpu0-supply = <&vcc>;
 			};
 		};
-	memory@80000000 {
+	memory {
 		device_type = "memory";
-		reg = <0x80000000 0x10000000>; /* 256 MB */
+		reg = <0x80000000 0x10000000>; // 256 MB 
 	};
 	aliases {
 		i2c0 = &i2c1;
@@ -53,12 +53,12 @@
 /*	};*/
 };
 &omap3_pmx_core {
-	uart3_pins: pinmux_uart3_pins {
-		pinctrl-single,pins = <
-			OMAP3_CORE1_IOPAD(0x219e, PIN_INPUT  | MUX_MODE0)	/* uart3_rx_irrx.uart3_rx_irrx */
-			OMAP3_CORE1_IOPAD(0x21a0, PIN_OUTPUT | MUX_MODE0)	/* uart3_tx_irtx.uart3_tx_irtx */
-		>;
-	};
+/*	uart3_pins: pinmux_uart3_pins {*/
+/*		pinctrl-single,pins = <*/
+/*			OMAP3_CORE1_IOPAD(0x219e, PIN_INPUT  | MUX_MODE0)	/* uart3_rx_irrx.uart3_rx_irrx */*/
+/*			OMAP3_CORE1_IOPAD(0x21a0, PIN_OUTPUT | MUX_MODE0)	/* uart3_tx_irtx.uart3_tx_irtx */*/
+/*		>;*/
+/*	};*/
 		mmc1_pins: pinmux_mmc1_pins {
 		pinctrl-single,pins = <
 			OMAP3_CORE1_IOPAD(0x2144, PIN_INPUT_PULLUP | MUX_MODE0)	/* sdmmc1_clk.sdmmc1_clk */
@@ -125,9 +125,17 @@
 &mmc3 {
 	status = "disabled";
 };
+&uart1 {
+	pinctrl-names = "default";
+//	pinctrl-0 = <&uart1_pins>;
+};
+&uart2 {
+	pinctrl-names = "default";
+//	pinctrl-0 = <&uart2_pins>;
+};
 &uart3 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&uart3_pins>;
+//	pinctrl-0 = <&uart3_pins>;
 };
 
 &usb_otg_hs {
@@ -139,6 +147,14 @@
 	phy-names = "usb2-phy";
 	mode = <3>;
 	power = <50>;
+};
+
+&iva {
+	status = "disabled";
+};
+
+&sgx_module {
+	status = "disabled";
 };
 
 
