--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -55,8 +55,8 @@
 &omap3_pmx_core {
 /*	uart3_pins: pinmux_uart3_pins {*/
 /*		pinctrl-single,pins = <*/
-/*			OMAP3_CORE1_IOPAD(0x219e, PIN_INPUT  | MUX_MODE0)	/* uart3_rx_irrx.uart3_rx_irrx */*/
-/*			OMAP3_CORE1_IOPAD(0x21a0, PIN_OUTPUT | MUX_MODE0)	/* uart3_tx_irtx.uart3_tx_irtx */*/
+/*			OMAP3_CORE1_IOPAD(0x219e, PIN_INPUT  | MUX_MODE0)	// uart3_rx_irrx.uart3_rx_irrx */
+/*			OMAP3_CORE1_IOPAD(0x21a0, PIN_OUTPUT | MUX_MODE0)	// uart3_tx_irtx.uart3_tx_irtx */
 /*		>;*/
 /*	};*/
 		mmc1_pins: pinmux_mmc1_pins {
