--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -41,6 +41,11 @@
      //(Minimum is System's Pagesize = 0x1000 Byte in my case
 
 };
+	usb2512b@2c {
+		compatible = "microchip,usb2517";
+//		reg = <0x2c>;
+(())		reset-gpios = <&gpio1 4 GPIO_ACTIVE_LOW>;
+	};
 /*		leds {*/
 /*		compatible = "gpio-leds";*/
 /*		pinctrl-names = "default";*/
