--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -44,7 +44,7 @@
 	usb2512b@2c {
 		compatible = "microchip,usb2517";
 //		reg = <0x2c>;
-(())		reset-gpios = <&gpio1 4 GPIO_ACTIVE_LOW>;
+		reset-gpios = <&gpio1 4 GPIO_ACTIVE_LOW>;
 	};
 /*		leds {*/
 /*		compatible = "gpio-leds";*/
