--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -65,6 +65,9 @@
 /*		};*/
 /*	};*/
 };
+&usbhshost {
+	status = "disabled";
+};
 &omap3_pmx_core {
 /*	uart3_pins: pinmux_uart3_pins {*/
 /*		pinctrl-single,pins = <*/
