--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -501,7 +501,7 @@ CONFIG_WATCHDOG=y
 CONFIG_SOFT_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG_ARCH_INITCALL=y
-CONFIG_OMAP_WATCHDOG=m
+CONFIG_MAX63XX_WATCHDOG=y
 CONFIG_MFD_CPCAP=y
 # CONFIG_ABX500_CORE is not set
 CONFIG_MFD_TI_AM335X_TSCADC=m
