--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -502,6 +502,7 @@ CONFIG_SOFT_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG_ARCH_INITCALL=y
 CONFIG_MAX63XX_WATCHDOG=y
+CONFIG_MAX6373_WATCHDOG_DT=y
 CONFIG_MFD_CPCAP=y
 # CONFIG_ABX500_CORE is not set
 CONFIG_MFD_TI_AM335X_TSCADC=m
