--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -498,11 +498,10 @@ CONFIG_OMAP4_THERMAL=y
 CONFIG_OMAP5_THERMAL=y
 CONFIG_DRA752_THERMAL=y
 CONFIG_WATCHDOG=y
-CONFIG_SOFT_WATCHDOG=y
+CONFIG_WATCHDOG_SYSFS=y
 CONFIG_GPIO_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG_ARCH_INITCALL=y
-CONFIG_MAX63XX_WATCHDOG=y
-CONFIG_MAX6373_WATCHDOG_DT=y
+# CONFIG_SIRFSOC_WATCHDOG is not set
 CONFIG_MFD_CPCAP=y
 # CONFIG_ABX500_CORE is not set
 CONFIG_MFD_TI_AM335X_TSCADC=m
